--- a/packages/webrtc-star-signalling-server/package.json
+++ b/packages/webrtc-star-signalling-server/package.json
@@ -150,7 +150,10 @@
   "devDependencies": {
     "@types/hapi__hapi": "^20.0.10",
     "@types/hapi__inert": "^5.2.3",
+    "@types/node": "^18.0.6",
     "aegir": "^37.2.0",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "p-event": "^5.0.1",
     "p-wait-for": "^4.1.0",
     "socket.io-client-v2": "npm:socket.io-client@^2.3.0",
